[package]
name = "hashlattice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
rmp-serde = { version = "0.15.4", features = ["serde128"] }
serde = {version = "1.0", features = ["derive"]}
async-trait = "0.1"
async-recursion = "1.0"
async-mutex = "1.4"
rand = "0.8"
hex = "0.4"
ed25519-dalek = {version = "1.0", features = ["serde"]}
sha2 = "0.10"
webrtc = "0.5"
