[package]
name = "hashlattice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
rmp-serde = { version = "0.15.4", features = ["serde128"] }
serde = {version = "1.0", features = ["derive"]}
async-trait = "0.1"
async-recursion = "1.0"
async-mutex = "1.4"
rand = {version = "0.8", features = ["getrandom"]}
hex = "0.4"
rsa = {version = "0.7", features = ["serde"]}
signature = "1.6"
sha2 = "0.10"
webrtc = "0.5"
tokio = "1.21"
tungstenite = "0.17"
tokio-tungstenite = "0.17"
